--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".Application">
+        android:theme="@style/AppTheme" >
+
         <activity
-            android:name=".CharacterActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".CharacterActivity"
+            android:label="@string/app_name" >
+        </activity>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -28,6 +35,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CharacterActivity" />
         </activity>
+
         <activity
             android:name=".EventActivity"
             android:label="@string/title_event_list"
@@ -36,6 +44,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ca.drewm.secondlifestory.CharacterActivity" />
         </activity>
+
         <activity
             android:name=".Customize"
             android:label="@string/title_activity_customize" >
