--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.drewm.secondlifestory" >
+    package="ca.secondlifestory" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,6 +15,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,30 +25,37 @@
 
         <activity
             android:name=".CharacterActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_activity_character" >
+        </activity>
+
+        <activity
+            android:name=".EventActivity"
+            android:label="@string/title_activity_event"
+            android:parentActivityName=".CharacterActivity" >
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.secondlifestory.CharacterActivity" />
+        </activity>
+
+        <activity
+            android:name=".CustomizeActivity"
+            android:label="@string/title_activity_customize"
+            android:parentActivityName=".CharacterActivity" >
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.secondlifestory.CharacterActivity" />
         </activity>
 
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".CharacterActivity" >
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CharacterActivity" />
-        </activity>
-
-        <activity
-            android:name=".EventActivity"
-            android:label="@string/title_event_list"
-            android:parentActivityName=".CharacterActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="ca.drewm.secondlifestory.CharacterActivity" />
-        </activity>
-
-        <activity
-            android:name=".Customize"
-            android:label="@string/title_activity_customize" >
         </activity>
     </application>
 
