--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.parse:parse-android:1.11.0'
     compile 'com.parse.bolts:bolts-android:1.3.0'
+    compile 'com.parse:parseui-widget-android:0.0.1'
 }
